<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/login_bg_main"
    android:orientation="vertical">

    <include layout="@layout/login_action_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/login_bg_main">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_double_height"
            android:background="@color/colorPrimary" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/vertical_margin"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_login_employee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_slot_login"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/vertical_margin">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_message_detail_user"
                        android:textSize="@dimen/text_medium" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cv_mgmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_patient"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="@dimen/vertical_margin"
            android:layout_marginRight="@dimen/vertical_margin"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/ll_login_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_slot_login"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/vertical_margin">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/vertical_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Admin"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"  />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/login_message_detail_admin"
                        android:textSize="@dimen/text_medium" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_tearm_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginBottom="@dimen/vertical_margin_half"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_mobile_msg1"
            android:textSize="@dimen/text_size_small"
            android:gravity="center"
            android:textColor="@color/login_color_text_lite" />

        <LinearLayout
            android:id="@+id/ll_terms_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/vertical_margin_half">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2.5dp"
                android:visibility="gone"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/signup_mobile_msg2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bg_underline"
                android:textSize="@dimen/text_size_small"
                android:text="@string/signup_mobile_msg3"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>