<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/login_action_bar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/login_bg_main">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/action_bar_double_height"
                        android:background="@color/colorPrimary" />


                    <LinearLayout
                        android:id="@+id/body"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/cv_patient"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/vertical_margin"
                            android:layout_marginLeft="@dimen/vertical_margin"
                            android:layout_marginRight="@dimen/vertical_margin"
                            card_view:cardCornerRadius="8dp"
                            card_view:cardElevation="4dp"
                            card_view:cardUseCompatPadding="true">

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="match_parent"
                                android:clickable="true"
                                android:paddingBottom="32dp"
                                android:paddingTop="@dimen/vertical_margin_half"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="@dimen/vertical_margin"
                                    android:orientation="vertical">

                                    <EditText
                                        android:id="@+id/et_company_name"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/login_et_multi_row"
                                        android:hint="Name"
                                        android:inputType="textPersonName"
                                        android:padding="@dimen/vertical_margin" />

                                    <EditText
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/login_et_multi_row"
                                        android:hint="Mobile Number"
                                        android:layout_marginTop="@dimen/vertical_margin"
                                        android:inputType="textPersonName"
                                        android:padding="@dimen/vertical_margin" />

                                    <EditText
                                        android:id="@+id/et_company_email"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/vertical_margin"
                                        android:background="@drawable/login_et_multi_row"
                                        android:hint="Username"
                                        android:inputType="textEmailAddress"
                                        android:padding="@dimen/vertical_margin" />

                                    <EditText
                                        android:id="@+id/et_company_password"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="@dimen/vertical_margin"
                                        android:background="@drawable/login_et_multi_row"
                                        android:hint="Password"
                                        android:inputType="textPassword"
                                        android:padding="@dimen/vertical_margin" />

                                </LinearLayout>


                            </LinearLayout>

                        </android.support.v7.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/body"
                        android:layout_marginTop="@dimen/vertical_margin"
                        android:elevation="10dp"
                        android:gravity="center">

                        <include layout="@layout/button_progress" />


                    </LinearLayout>

                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/ll_tearm_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_mobile_msg1"
                        android:textSize="@dimen/text_size_small"
                        android:gravity="center"
                        android:textColor="@color/login_color_text_lite" />

                    <LinearLayout
                        android:id="@+id/ll_terms_use"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="@dimen/vertical_margin_half">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2.5dp"
                            android:visibility="gone"
                            android:textColor="@color/colorPrimaryDark"
                            android:text="@string/signup_mobile_msg2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_bg_underline"
                            android:textSize="@dimen/text_size_small"
                            android:text="@string/signup_mobile_msg3"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/vertical_margin"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/login_message"
                        android:textColor="@color/login_color_text"
                        android:textSize="@dimen/text_size_medium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="4dp"
                        android:background="@drawable/login_bg_underline"
                        android:text="Login"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>